--- a/views/loginadmin.ejs
+++ b/views/loginadmin.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>LOGIIIIN</h1>
-	<form action="" methid="post" autocomplete="off">
+	<form action="" method="post" autocomplete="off">
 		<input type="text" name="login">
 		<input type="text" name="password" id="">
 		<button type="submit">Login</button>
