--- a/views/loginadmin.ejs
+++ b/views/loginadmin.ejs
@@ -8,7 +8,7 @@
 	<h1>LOGIIIIN</h1>
 	<form action="" method="post" autocomplete="off">
 		<input type="text" name="login">
-		<input type="text" name="password" id="">
+		<input type="text" name="password">
 		<button type="submit">Login</button>
 	</form>
 </body>
