--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,7 +18,8 @@
 		result.forEach(function (item,i) {
 			var catblock = '<div class="catblock">'+
 			'<h3>'+item.name+'</h3>'+
-			'</div>'
+			'</div>';
+			$("main").append(catblock);
 		})
 	});
 </script>
