--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -26,8 +26,13 @@
 				res.forEach(function(item,i){
 					var skillblock = '<div class="skillblock">'+
 					'<h4>'+item.description+'</h4>'+
+					'<button class="deldesc" data-link="https://sheltered-savannah-33614.herokuapp.com/del_step/'+item.id+'">'Delete+'</button>'+
 					'</div>';
 					$("main").append(skillblock);
+					$(".deldesc").click(function(){
+						$.ajax($(this).attr("data-link"));
+						location.reload();
+					})
 				});
 			});								
 		});
