--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -26,6 +26,7 @@
 				res.forEach(function(item,i){
 					var skillblock = '<div class="skillblock">'+
 					'<h4>'+item.description+'</h4>'+
+					'<input type="text" class="step" value="'+item.step+'">'+
 					'<button class="deldesc" data-link="https://sheltered-savannah-33614.herokuapp.com/del_step" data-id="'+item.id+'">Delete</button>'+
 					'</div>';
 					$("main").append(skillblock);
