--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -12,7 +12,7 @@
 	<main>
 
 	</main>
-	<form id="#addstep" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_step/">
+	<form id="#addstep" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_step">
 		Heading: <input type="text" name="heading" required="">
 		Description: <input type="text" name="description" required="">
 		Step: <input type="number" name="step" required="">
@@ -53,7 +53,7 @@
 		e.preventDefault();
 		var formData={};
 		$(this).find("input[name]").each(function(index,node){
-			formData[node.name] = node.value;
+			formData[node.attr("name")] = node.val();
 		});
 		formData["id"] = id;
 		$.post($(this).attr("action"), formData).done(function (data) {
