--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -53,7 +53,7 @@
 		e.preventDefault();
 		var formData={};
 		$(this).find("input[name]").each(function(index,node){
-			formData[node.attr("name")] = node.val();
+			formData[node.name] = node.val();
 		});
 		formData["id"] = id;
 		$.post($(this).attr("action"), formData).done(function (data) {
