--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -12,7 +12,7 @@
 	<main>
 
 	</main>
-	<form id="#addstep" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_step">
+	<form id="addstep" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_step">
 		Heading: <input type="text" name="heading" required="">
 		Description: <input type="text" name="description" required="">
 		Step: <input type="number" name="step" required="">
