--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -46,9 +46,8 @@
 					});
 					$(".updphotoform").submit(function(e){
 						e.preventDefault();
-						var formData = new FormData($(this)[0]);
 
-						$.post($(this).attr("action"), formData).done(function(res){
+						$.post($(this).attr("action"), $(this).serialize()).done(function(res){
 							$.post("https://sheltered-savannah-33614.herokuapp.com/add_step_image", {id: $("updphotoform input[name='id']").val(), image: res.url});
 						});
 					})
