--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -46,7 +46,10 @@
 					});
 					$(".updphotoform").submit(function(e){
 						e.preventDefault();
-						var formData = new FormData($(this)[0]);
+						var formData = new FormData();
+						jQuery.each($(".updphotoform input[type='file']")[0].files, function(i, file) {
+   							data.append("image", file);
+						});
 						$.post($(this).attr("action"), formData).done(function(res){
 							$.post("https://sheltered-savannah-33614.herokuapp.com/add_step_image", {id: $("updphotoform input[name='id']").val(), image: res.url});
 						});
