--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -57,6 +57,7 @@
 						        contentType: false,
 						        success: function(res){
 						        	$.post("https://sheltered-savannah-33614.herokuapp.com/add_step_image", {id: $(".updphotoform input[name='id']").val(), image: res.url});
+						        	$(this).unbind("submit");
 						        	location.reload();
 						        },
 						        error: function(er){}
