--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -34,7 +34,7 @@
 					var skillblock = '<div class="skillblock">'+
 					'<h4>'+item.heading+'</h4>'+
 					'<img src='+item.photo_url+'>'+
-					'<form class="updphotoform" method="POST" action="https://sheltered-savannah-33614.herokuapp.com/upload" enctype="multipart/form-data"><input type="file" name="image"><input type="hidden" name="id" value="'+item.id+'">'+
+					'<form class="updphotoform" method="POST" action="https://sheltered-savannah-33614.herokuapp.com/upload_step" enctype="multipart/form-data"><input type="file" name="image"><input type="hidden" name="id" value="'+item.id+'"><input type="hidden" name="skillid" value="'+id+'">'+
 					'<button type="submit" class="updphoto">Update photo</button></form>'+
 					'<input type="text" data-link="https://sheltered-savannah-33614.herokuapp.com/move_step" data-id="'+item.id+'" class="step" value="'+item.step+'">'+
 					'<button class="deldesc" data-link="https://sheltered-savannah-33614.herokuapp.com/del_step" data-id="'+item.id+'">Delete</button>'+
@@ -44,25 +44,6 @@
 						$.post($(this).attr("data-link"), {id: $(this).attr("data-id")});
 						location.reload();
 					});
-					$(".updphotoform").submit(function(e){
-						e.preventDefault();
-						var url=$(this).attr("action");
-						var form = new FormData($(this)[0]);
-						$.ajax({
-						        url: url,
-						        method: "POST",
-						        dataType: 'json',
-						        data: form,
-						        processData: false,
-						        contentType: false,
-						        success: function(res){
-						        	$.post("https://sheltered-savannah-33614.herokuapp.com/add_step_image", {id: $(".updphotoform input[name='id']").val(), image: res.url});
-						        	$(this).unbind("submit");
-						        	location.reload();
-						        },
-						        error: function(er){}
-						});
-					})
 					$(".step").change(function(){
 						$.post($(this).attr("data-link"), {id: $(this).attr("data-id"), step: $(this).val()});
 						location.reload();
