--- a/views/adminskills.ejs
+++ b/views/adminskills.ejs
@@ -29,6 +29,10 @@
 				$.post($(this).attr("data-link"), {id: $(this).attr("data-id")});
 				location.reload();
 			});
+			$(".deldskill").click(function(){
+				$.post($(this).attr("data-link"), {id: $(this).attr("data-id")});
+				location.reload();
+			});			
 		});
 	});
 </script>
