--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -27,7 +27,7 @@
 			$("main").append(catblock);
 		});
 	});
-	$("#addcategoriy").submit(function(e){
+	$("#addcategory").submit(function(e){
 		e.preventDefault();
 		var formData={};
 		$(this).find("input[name]").each(function(index,node){
