--- a/views/adminskill.ejs
+++ b/views/adminskill.ejs
@@ -35,7 +35,7 @@
 			$.ajax("https://sheltered-savannah-33614.herokuapp.com/skill_steps/"+id)
 			.done(function(res){
 				res.forEach(function(item,i){
-					var skillblock = '<div class="skillblock">'+
+					var stepblock = '<div class="stepblock">'+
 					'<h4>'+item.heading+'</h4>'+
 					'<img src='+item.photo_url+'>'+
 					'<form class="updphotoform" method="POST" action="https://sheltered-savannah-33614.herokuapp.com/upload_step" enctype="multipart/form-data"><input type="file" name="image"><input type="hidden" name="id" value="'+item.id+'"><input type="hidden" name="skillid" value="'+id+'">'+
@@ -43,7 +43,7 @@
 					'<input type="text" data-link="https://sheltered-savannah-33614.herokuapp.com/move_step" data-id="'+item.id+'" class="step" value="'+item.step+'">'+
 					'<button class="deldesc" data-link="https://sheltered-savannah-33614.herokuapp.com/del_step" data-id="'+item.id+'">Delete</button>'+
 					'</div>';
-					$("main").append(skillblock);
+					$("main").append(stepblock);
 					$(".deldesc").click(function(){
 						$.post($(this).attr("data-link"), {id: $(this).attr("data-id")});
 						location.reload();
