--- a/views/loginadmin.ejs
+++ b/views/loginadmin.ejs
@@ -7,13 +7,22 @@
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script> -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<style>
+	body{
+		background-color: #eee;
+	}
+</style>
 </head>
 <body>
+	<div class="container">
 	<h1>Admin Login</h1>
 	<form action="" method="post" autocomplete="off">
-		<input type="text" name="login">
-		<input type="password" name="password">
-		<button type="submit">Login</button>
+		<div class="formgroup">
+			<input type="text" name="login" class="formcontrol">
+			<input type="password" name="password" class="formcontrol">
+			<button type="submit" class="btn btn-primary">Login</button>
+		</div>
 	</form>
+	</div>
 </body>
 </html>
