--- a/views/loginadmin.ejs
+++ b/views/loginadmin.ejs
@@ -17,9 +17,9 @@
 	<div class="container">
 	<h1>Admin Login</h1>
 	<form action="" method="post" autocomplete="off">
-		<div class="formgroup">
-			<input type="text" name="login" class="formcontrol">
-			<input type="password" name="password" class="formcontrol">
+		<div class="form-group">
+			<input type="text" name="login" class="form-control">
+			<input type="password" name="password" class="form-control">
 			<button type="submit" class="btn btn-primary">Login</button>
 		</div>
 	</form>
