--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,7 +17,7 @@
 	<main>
 
 	</main>
-	<form id="addcategory" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_category">
+	<form class="w-50" id="addcategory" method="post" action="https://sheltered-savannah-33614.herokuapp.com/add_category">
 		<div class="form-group">
 		<label>Name: <input type="text" name="name" required="" class="form-control"></label>
 		<input type="submit" class="btn btn-primary">
